2009-XX-XX
    * version 0.6a1pre
    * asciidoc is no longer required to build Muttator
    * The full help system now available for Muttator.
    * add 'titlestring' option
    * rename *FolderLoaded* autocommand event to *FolderLoad*
    * add the *DOMLoad* autocommand event
    * add 'online' option
    * add 'smtpserver' option

2009-03-29
    * version 0.5
    * fixes for recent TB nightly changes
    * new 'threads' option (non-functional for now)
    * new 'archivefolder' option
    * small bug fixes

2008-08-03:
    * version 0.4
    * new 'autoexternal' option to edit new messages/reply with the external editor by default.
      NOTE: You must set this option in your .muttatorrc, as options are not shared between the
      main thunderbird window and the compose window!
    * various *l* mappings for labeling messages
    * [m]p[m] to open RSS message in browser
    * [m]y[m] to yank sender or RSS URL
    * [m]Y[m] to yank subject
    * [m]R[m] to reply to all
    * new compose mappings: [m]s[m], [m]t[m] and [m]i[m] - Focus subject:, To: or message body
    * [m]q[m] quits composer now
    * new [m]x[m] mapping to toggle HTML display (is there a need for "simple HTML"?)
    * new [m]h[m] mapping to toggle headers

2008-06-04:
    * version 0.3
    * new tab related mappings + commands
    * new [c]:contacts[c] and [c]:contact[c] commands for address book operations
    * new [c]:message[c] command
    * new -- COMPOSE -- mode with mutt-like keybindings ([m]y[m] to send message, [m]e[m] to edit message)
    * external editor support for sending messages
    * [m]m[m] to open a new message compose window
    * new [m]M[m] command to send a new message to the sender of the currently selected message
    * completions for [c]:goto[c], [c]:copyto[c], [c]:moveto[c] commands
    * [c]:emptytrash[c] command
    * new [m]*[m] and [m]#[m] mappings to select next/prev message from same author (not perfect matching however)